[gd_scene load_steps=5 format=3 uid="uid://0qeo6m0edgpk"]

[ext_resource type="PackedScene" uid="uid://biaoa087sxvd5" path="res://assets/scenes/ui/scene_transition_animation.tscn" id="1_2l02u"]
[ext_resource type="Script" uid="uid://bcjn2qrrhsrdu" path="res://assets/scenes/ui/win_screen.gd" id="1_ycfgm"]
[ext_resource type="FontFile" uid="uid://dx73f241dtx61" path="res://assets/fonts/FreeCheese-Regular.ttf" id="2_ycfgm"]

[sub_resource type="LabelSettings" id="LabelSettings_lybwe"]
font = ExtResource("2_ycfgm")
font_size = 100
font_color = Color(0.077499926, 0.93, 0, 1)
outline_size = 8

[node name="WinScreen" type="Control"]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycfgm")

[node name="SceneTransition" parent="." instance=ExtResource("1_2l02u")]
layout_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5411765)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "YOU WON!"
label_settings = SubResource("LabelSettings_lybwe")

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
